--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hire Me Please :D
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset='UTF-8'>
+		<link rel='stylesheet' href='stylesheet.css' type='text/css'></link>
+		<title>About | Saturday Night Movies</title>
+	</head>
+	<body>
+		<h1>We Are Cool Dudes</h1>
+		<p>Thats all the "Contact" we need</p>
+	</body>
+</html>
