--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
 		<title>About | Saturday Night Movies</title>
 	</head>
 	<body>
-		<h1>We Are Cool Dudes</h1>
-		<p>Thats all the "Contact" we need</p>
+		<header class='col-12'>
+			<img src='SNM.png'>
+		</header>
+		<nav class='col-12'>
+			<ul>
+				<li class='col-3'><a href='https://saturdaynightmovies.github.io/'>Home</a></li>
+				<li class='col-3'><a href='https://saturdaynightmovies.github.io/archive'>Archive</a></li>
+				<li class='col-3'><a href='https://saturdaynightmovies.github.io/about'>About</a></li>
+				<li class='col-3' id='open'><a href='https://saturdaynightmovies.github.io/contact'>Contact</a></li>
+			</ul>
+		</nav>
+		<main class='col-12'>
+		</main>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+		<script type='text/javascript' src='script.js'></script>
 	</body>
 </html>
