--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='UTF-8'>
 		<link rel='stylesheet' href='stylesheet.css' type='text/css'></link>
-		<title>About | Saturday Night Movies</title>
+		<title>Contact | Saturday Night Movies</title>
 	</head>
 	<body>
 		<header class='col-12'>
