--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 			</ul>
 		</nav>
 		<main class='col-12'>
+			<div class='col-3 left'></div>
+			<article class='col-6'>
+				<h1>Contact Information Coming Soon</h1>
+			</article>
 		</main>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 		<script type='text/javascript' src='script.js'></script>
