--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 				<h1>Contact Information Coming Soon</h1>
 			</article>
 		</main>
+		<footer class='col-12'>Created by Robertson McClure</footer>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 		<script type='text/javascript' src='script.js'></script>
 	</body>
